--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <p>_____________________________________
 <br>
 
-<h2>Battle Stats & NNB</h2>
+<h2>Battle Stats</h2>
 <br>
 The 3 most used builds are:<br>
 <br>
