--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
 <body>
   <h1>Happy Jump Guide</h1>
+  <button onclick="toggleDarkMode()">Toggle Dark Mode</button>
+
   <p>_____________________________________
 <br>
 
@@ -151,6 +153,7 @@ Explanation:<br>
 This method is best utilized when working at a 10* AN (Adult Novelties Shop) since it doubles your gains from EDVDs. This method is not for those relying on passive income, spending $21 Million is no small feat but this is by far the most effective method to gain Happy as fast as possible independently without extensive effort or help from others.<br>
 ==============================
  </p>
+
   <!-- Project -->
   <script src="main.js"></script>
 </body>
