--- a/index.html
+++ b/index.html
@@ -153,6 +153,15 @@ Explanation:<br>
 This method is best utilized when working at a 10* AN (Adult Novelties Shop) since it doubles your gains from EDVDs. This method is not for those relying on passive income, spending $21 Million is no small feat but this is by far the most effective method to gain Happy as fast as possible independently without extensive effort or help from others.<br>
 ==============================
  </p>
+ <footer>
+  <p><br><br>
+  For any questions, feel free to reach out to <a href="https://www.torn.com/profiles.php?XID=2184575">Phillip_J_Fry [2184575]</a><br>
+  or<br>
+    Return to the <a href="https://discord.com/invite/XdunSgj5be">TC-ESSENTIALS</a>
+     server
+  </p>
+</footer>
+
 
   <!-- Project -->
   <script src="main.js"></script>
