--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <h1>Happy Jump Guide</h1>
-  <button onclick="toggleDarkMode()">Toggle Dark Mode</button>
+  <button onclick="toggleDarkMode()">Toggle Dark/Light Mode</button>
 
   <p>_____________________________________
 <br>
