--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Primary Meta Tags -->
+<link rel="manifest" href="/manifest.json">
+
+  <title>Happy Jump Guide</title>
+<meta name="title" content="HAPPY Jump Guide ">
+<meta name="HJ Guide" content="Learn how to properly do a Happy Jump !">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://bit.ly/Happy-Jump-Guide">
+<meta property="og:title" content="HJ Guide">
+<meta property="og:description" content="How to: Happy Jump ">
+<meta property="og:image" content="https://gyazo.com/4530adb1a627d5410fd4f3aad9597330.png">
+	
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Happy Jump Guide</title>
+
   
   <!-- HTML -->
   
