--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
 <meta name="HJ Guide" content="Learn how to properly do a Happy Jump !">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://bit.ly/Happy-Jump-Guide">
-<meta property="og:title" content="HJ Guide">
-<meta property="og:description" content="How to: Happy Jump ">
+<meta property="og:title" content="Happy Jump Guide">
+<meta property="og:description" content="How to: Happy Jump
+
+Learn how to properly do 3 different Happy Jumps!
+• Lollipop Jumps
+• Choco Jumps 
+• DVD Jumps">
 <meta property="og:image" content="https://gyazo.com/033f6a298f811b60eeada7ccdf7ac3ee.png">
 	
   <meta charset="UTF-8">
