--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ Learn how to properly do 3 different Happy Jumps!
 • Lollipop Jumps
 • Choco Jumps 
 • DVD Jumps">
-<meta property="og:image" content="https://gyazo.com/033f6a298f811b60eeada7ccdf7ac3ee.png">
+<meta property="og:image" content="https://gyazo.com/033f6a298f811b60eeada7ccdf7ac3ee.jpeg">
 	
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
