--- a/index.html
+++ b/index.html
@@ -175,7 +175,15 @@ This method is best utilized when working at a 10* AN (Adult Novelties Shop) sin
   For any questions, feel free to reach out to <a href="https://www.torn.com/profiles.php?XID=2184575">Phillip_J_Fry [2184575]</a><br>
   or<br>
     Return to the <a href="https://discord.com/invite/XdunSgj5be">TC-ESSENTIALS</a>
-     server
+     server for help.<br><br><br>
+     
+     Open Sourced at<br>
+     <a href="https://github.com/pjfry2184575/Happy-Jump-Guide.git">
+  <img src="https://gyazo.com/bff2411acc869f6cff61f791f5fb1d87.png" alt="GitHub" width="50" height="50">
+</a>
+
+
+
   </p>
 </footer>
 
