--- a/index.html
+++ b/index.html
@@ -171,7 +171,9 @@ This method is best utilized when working at a 10* AN (Adult Novelties Shop) sin
 ==============================
  </p>
  <footer>
-  <p><br><br>
+  <p>
+      <button onclick="toggleDarkMode()">Toggle Dark/Light Mode</button>
+    <br><br>
   For any questions, feel free to reach out to <a href="https://www.torn.com/profiles.php?XID=2184575">Phillip_J_Fry [2184575]</a><br>
   or<br>
     Return to the <a href="https://discord.com/invite/XdunSgj5be">TC-ESSENTIALS</a>
