--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ This method is best utilized when working at a 10* AN (Adult Novelties Shop) sin
   <p><br><br>
       <button onclick="toggleDarkMode()">Toggle Dark/Light Mode</button>
     <br><br><br><br>
-  For any questions, feel free to reach out to <a href="https://www.torn.com/profiles.php?XID=2184575">Phillip_J_Fry [2184575]</a><br>
+  For any questions, feel free to reach out to <a href="https://www.torn.com/profiles.php?XID=2184575"><br>Phillip_J_Fry [2184575]</a><br>
   or<br>
     Return to the <a href="https://discord.com/invite/XdunSgj5be">TC-ESSENTIALS</a>
      server for help.<br><br><br>
