--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <meta property="og:description" content="How to: Happy Jump
 
 Learn how to properly do 3 different Happy Jumps!
+
+Including:
 • Lollipop Jumps
 • Choco Jumps 
 • DVD Jumps">
