--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Including:
   
 
   <!-- Custom Styles -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/view/style.css">
 </head>
 
 <body>
